--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/shawsy171/keepjit#readme",
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/node": "^10.3.3",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.1",
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "mongodb": "^3.0.10",
     "tslint": "^5.10.0"
   }
