--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/shawsy171/keepjit#readme",
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.1.0",
     "@types/node": "^10.3.3",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.1",
