--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./src/server/index.ts"
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,19 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.0",
+    "@types/next": "^6.0.4",
     "@types/node": "^10.3.3",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.1",
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
+    "next": "^6.1.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "tslint": "^5.10.0"
   }
 }
