--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build:live",
-    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts"
+    "build:live": "nodemon --exec ./node_modules/.bin/ts-node -- ./server.ts --jsx"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@types/react": "^16.4.6",
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
