--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@types/next": "^6.0.4",
     "@types/node": "^10.3.3",
     "nodemon": "^1.17.5",
-    "ts-node": "^6.1.1",
+    "ts-node": "^6.2.0",
     "typescript": "^2.9.2"
   },
   "dependencies": {
     "@types/react": "^16.4.6",
     "@zeit/next-typescript": "^1.1.0",
     "express": "^4.16.3",
+    "isomorphic-unfetch": "^2.1.1",
     "mongodb": "^3.0.10",
     "next": "^6.1.1",
     "react": "^16.4.1",
