--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@types/styled-components": "^4.0.3",
     "@zeit/next-typescript": "^1.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
@@ -43,6 +44,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "styled-components": "^4.0.2",
     "tslint": "^5.10.0"
   }
 }
