--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^10.3.3",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.6",
+    "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "nodemon": "^1.17.5",
     "ts-jest": "^23.10.0",
