chore: upgraded npm
chore: upgraded npm

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isomorphic-unfetch": "^2.1.1",
     "mongodb": "^3.0.10",
     "next": "^6.1.1",
+    "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
