style: added CSS reset
style: added CSS reset

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@zeit/next-typescript/babel"
   ],
   "plugins": [
-    "styled-components"
+    "styled-components",
+    "styled-jsx/babel"
   ]
 }
