--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^4.0.3",
+    "@types/styled-jsx": "^2.2.7",
     "@zeit/next-typescript": "^1.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
@@ -47,6 +48,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "styled-components": "^4.0.2",
+    "styled-jsx": "^3.1.2",
     "tslint": "^5.10.0"
   }
 }
