feat: added syntax highlighting and card styling

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/shawsy171/keepjit#readme",
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/jest": "^23.3.2",
     "@types/mongodb": "^3.1.0",
     "@types/next": "^6.0.4",
     "@types/node": "^10.3.3",
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.6",
+    "@types/showdown": "^1.7.5",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
     "nodemon": "^1.17.5",
@@ -40,6 +42,7 @@
     "@zeit/next-typescript": "^1.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "highlight.js": "^9.13.1",
     "isomorphic-unfetch": "^2.1.1",
     "mongodb": "^3.0.10",
     "next": "^6.1.1",
@@ -47,6 +50,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "showdown": "^1.9.0",
     "styled-components": "^4.0.2",
     "styled-jsx": "^3.1.2",
     "tslint": "^5.10.0"
