feat: upgraded to next js 7
feat: upgraded to next js 7, however now styled-jsx no longer works

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,6 @@
     "@zeit/next-typescript/babel"
   ],
   "plugins": [
-    "styled-components",
-    "styled-jsx/babel"
+    "styled-components"
   ]
 }
