--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "@types/prop-types": "^15.5.5",
     "@types/react": "^16.4.6",
     "@types/showdown": "^1.7.5",
+    "express": "^4.16.4",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.7",
     "ts-jest": "^23.10.0",
     "ts-node": "^6.2.0",
     "typescript": "^2.9.2"
@@ -39,17 +40,17 @@
   "dependencies": {
     "@types/styled-components": "^4.0.3",
     "@types/styled-jsx": "^2.2.7",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
     "highlight.js": "^9.13.1",
     "isomorphic-unfetch": "^2.1.1",
-    "mongodb": "^3.0.10",
-    "next": "^6.1.1",
+    "mongodb": "^3.1.10",
+    "next": "^7.0.2",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "showdown": "^1.9.0",
     "styled-components": "^4.0.2",
     "styled-jsx": "^3.1.2",
